[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9" ]

[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "meta-package-manager"
version = "6.7.0.dev0"
description = "🎁 wraps all package managers with a unifying CLI"
readme = "readme.md"
keywords = [
  "alpine linux",
  "apk",
  "apm",
  "apt",
  "apt-mint",
  "asdf",
  "atom",
  "brew",
  "cargo",
  "cask",
  "choco",
  "chocotaley",
  "CLI",
  "cli-tools",
  "composer",
  "cpan",
  "cyclonedx",
  "deb-get",
  "dnf",
  "dnf5",
  "emerge",
  "eopkg",
  "flatpak",
  "fwupd",
  "gem",
  "gnu guix",
  "guix",
  "homebrew",
  "mac app store",
  "macos",
  "macports",
  "mas",
  "meta-package-manager",
  "mise",
  "nix",
  "nixpkgs",
  "node",
  "npm",
  "opkg",
  "pacaur",
  "package",
  "package manager",
  "package url",
  "package-manager-cli",
  "pacman",
  "pacstall",
  "paru",
  "php composer",
  "pip",
  "pipx",
  "pkg",
  "plugin",
  "portage",
  "ports",
  "powershell",
  "powershell-gallery",
  "psresourceget",
  "purl",
  "pwsh",
  "pwsh-gallery",
  "ruby",
  "ruby-gem",
  "rust",
  "sbom",
  "scoop",
  "sdkman",
  "sfsu",
  "snap",
  "spdx",
  "steamcmd",
  "stew",
  "swiftbar",
  "swiftbar-plugin",
  "topgrade",
  "uv",
  "uvx",
  "visual studio code",
  "void linux",
  "vscode",
  "vscodium",
  "winget",
  "xbar",
  "xbar-plugin",
  "xbps",
  "yarn",
  "yarn-berry",
  "yay",
  "yum",
  "zb",
  "zerobrew",
  "zypper",
]
license = "GPL-2.0-or-later"
license-files = [ "license" ]
authors = [ { name = "Kevin Deldycke", email = "kevin@deldycke.com" } ]
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">=3.10"
classifiers = [
  # See: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: BSD :: NetBSD",
  "Operating System :: POSIX :: BSD :: OpenBSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
  "Typing :: Typed",
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# See also discussion about upper limits at: https://iscinumpy.dev/post/bound-version-constraints/#tldr
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
  # backports.strenum 1.3.0 is required to support enum.StrEnum in Python 3.10.
  "backports-strenum>=1.3; python_version<'3.11'",
  # boltons 25.0.0 is the first version to support Python 3.13.
  "boltons>=25",
  # click-extra 7.16.0 introduces the ConfigValidator / ValidationError
  # public types used by meta_package_manager.config to validate
  # [mpm.managers.<id>] override sub-trees.
  # click-extra 7.16.1 fixes ConfigOption.params_template being mutated in place
  # by merge_default_map, which caused test isolation failures when a config
  # file was loaded in one test and affected subsequent tests.
  # click-extra 7.18.0 introduces click_extra.man_page.write_manpages() and
  # click_extra.wrap.resolve_target_command(), used by repomatic's release
  # engine to produce the .1 tarball bundled with each GitHub release.
  # click-extra 7.19.0 adds the `click_extra_manpages` Sphinx config (with
  # `render_html` HTML siblings via mandoc/groff) and the
  # `{click-extra-manpages}` directive that powers the live man-page index
  # in docs/cli-parameters.md, plus the `manpages_url` cross-linking target.
  "click-extra>=7.19",
  # extra-platforms 10.0.0 drops the distro dependency.
  "extra-platforms>=10",
  # packageurl-python 0.16.0 is the first to support Python 3.13. Required at
  # runtime by meta_package_manager.package and meta_package_manager.specifier
  # for cross-manager package identification, independent of SBOM features.
  "packageurl-python>=0.16",
  # tomllib is not part of the standard library before Python 3.11. Version 2.3.0 is the first to support Python 3.14.
  "tomli>=2.3; python_version<'3.11'",
  # tomli_w 1.1.0 is the first to remove Python 3.8 support.
  "tomli-w>=1.1",
  # xmltodict 0.12 stabilized the parse()/unparse() API we rely on in
  # managers/zypper.py. 1.0.0 was a stability bump with no functional change.
  # Keeping the floor low avoids forcing downstream packagers (Guix, Debian
  # stable) to ship a newer xmltodict than they otherwise need.
  "xmltodict>=0.12",
]

# Package referenced above and also featured in [project.optional-dependencies] or [dependency-groups]
# will be set without version specifier as they are already constrained.
[project.optional-dependencies]
toml = [ "click-extra[toml]" ]
yaml = [ "click-extra[yaml]" ]
json5 = [ "click-extra[json5]" ]
jsonc = [ "click-extra[jsonc]" ]
hjson = [ "click-extra[hjson]" ]
xml = [ "click-extra[xml]" ]
# SBOM generation (`mpm sbom`) needs the CycloneDX and SPDX libraries.  The
# cyclonedx [validation] extra is intentionally omitted: schema validation
# runs in the test suite (see tests/test_cli_sbom.py), which keeps
# jsonschema, rfc3987-syntax, lark, and lxml out of the runtime install even
# with `mpm[sbom]`.  cyclonedx-python-lib 11.4.0 is the first to expose the
# CycloneDX 1.7 schema (`JsonV1Dot7`, `SchemaVersion.V1_7`) that
# `meta_package_manager.sbom.CycloneDX` targets, and is also new enough to
# support Python 3.14; 11.9.0 introduced `LicenseExpression.details` for
# per-identifier license-expression metadata (`LicenseExpressionDetails`),
# which the renderer uses to attach canonical SPDX URLs to each identifier
# inside a compound expression.  spdx-tools 0.8.2 is the first version we
# used to implement SPDX support.
sbom = [ "cyclonedx-python-lib>=11.9", "spdx-tools>=0.8.2" ]

[project.scripts]
mpm = "meta_package_manager.__main__:main"
# Alias for the main entry point. So we can call `uvx meta-package-manager` directly.
meta-package-manager = "meta_package_manager.__main__:main"

[project.urls]
"Homepage" = "https://github.com/kdeldycke/meta-package-manager"
"Download" = "https://github.com/kdeldycke/meta-package-manager/releases/tag/v6.7.0.dev0"
"Changelog" = "https://github.com/kdeldycke/meta-package-manager/blob/main/changelog.md"
"Issues" = "https://github.com/kdeldycke/meta-package-manager/issues"
"Repository" = "https://github.com/kdeldycke/meta-package-manager"
"Funding" = "https://github.com/sponsors/kdeldycke"

[dependency-groups]
test = [
  "click-extra[pytest]",
  "click-extra[toml]",
  "coverage[toml]>=7.12",
  # The [validation] extra provides the jsonschema-based validators used to assert
  # generated CycloneDX SBOMs are schema-valid. Kept test-only (not a runtime dep) so
  # the heavy validation stack stays out of the install. See tests/test_cli_sbom.py.
  "cyclonedx-python-lib[validation]",
  "extra-platforms",
  "pytest>=9.0.1",
  "pytest-cov>=7",
  "pytest-github-actions-annotate-failures>=0.3",
  "pytest-randomly>=4.0.1",
  "pytest-xdist[psutil]>=3.8",
  "pyyaml>=6",
  # SPDX SBOM generation is now gated behind the [sbom] extra (see
  # [project.optional-dependencies]); re-add spdx-tools at test time so the
  # SPDX-format tests in tests/test_cli_sbom.py still import.
  "spdx-tools",
]
docs = [
  "click-extra[sphinx]",
  "furo>=2025.9.25",
  "myst-parser>=4",
  "sphinx",
  "sphinx-autodoc-typehints>=2.4",
  # sphinx-click 6.1.0 is the first version to drop Python 3.9.
  "sphinx-click>=6.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6",
  "sphinx-issues>=5",
  "sphinxcontrib-mermaid>=1.2.3",
  "sphinxext-opengraph>=0.13",
  # tomlkit round-trips pyproject.toml edits (preserving comments and layout)
  # for the GitHub label sync in docs/docs_update.py.
  "tomlkit>=0.13",
]
typing = [
  "types-boltons>=25.0.0.20250919",
  "types-pyyaml>=6.0.12.9",
  "types-xmltodict>=1.0.1.20250920",
]

[tool.setuptools]
# Distributors like Guix (https://codeberg.org/guix/guix/pulls/8047) that lack uv-build usually fall back to
# setuptools. Without explicit package discovery configuration, setuptools sees tests/, docs/, packaging/, and other
# top-level directories as packages and fails with "multiple top-level packages discovered" error. uv-build on the
# other hand ignores this section completely (it relies on [tool.uv].build-backend.module-root instead), so this is
# purely a compatibility shim for setuptools-based builds.
packages.find.include = [ "meta_package_manager*" ]

[tool.uv]
# Cooldown period.
exclude-newer = "1 week"
# Per-package overrides for freshly-published dependencies we want to pull in
# before the global cooldown would normally let them through. Date format
# uses an ISO 8601 calendar date for ``exclude-newer-package`` entries.
exclude-newer-package = { click-extra = "2026-06-13" }
# Package is at root level, not in "./src/".
build-backend.module-root = ""

[tool.nuitka]
product-name = "Meta Package Manager"
file-description = "🎁 wraps all package managers with a unifying CLI"
copyright = "Kevin Deldycke <kevin@deldycke.com> and contributors. Distributed under GPL-2.0-or-later license."
file-version = "6.7.0"
product-version = "6.7.0"
# Each platform needs its native icon format (all rendered from icon.svg):
# .icns for macOS, .ico for Windows, .png for Linux. Passing a non-native
# image (like a PNG to --windows-icon-from-ico) makes Nuitka require the
# imageio package to convert it, which fails the build. Per-OS flags not
# matching the build host are ignored.
macos-app-icon = "docs/assets/icon.icns"
linux-icon = "docs/assets/icon.png"
windows-icon-from-ico = "docs/assets/icon.ico"
include-package-data = [ "click_extra" ]
# Packages whose imports are gated behind try/except in click-extra (config
# loader) and meta_package_manager.sbom: Nuitka skips these even when they
# are installed, so force-include them. Pairs with `[tool.repomatic]
# nuitka.extras` which syncs the corresponding mpm extras into the build
# venv. xmltodict is already an mpm runtime dep, so it does not need an
# entry here (Nuitka picks it up via the eager import in zypper.py).
include-package = [ "cyclonedx", "hjson", "json5", "jsonc", "spdx_tools", "yaml" ]

[tool.typos]
# Correct capitalization for proper nouns.
default.extend-identifiers = { Github = "GitHub", IOS = "iOS", Javascript = "JavaScript", MacOS = "macOS", PyPi = "PyPI", Typescript = "TypeScript" }
# Non-typo words flagged by default: `astroid` (the Python AST library) and
# `oject` (a "project" fragment surfaced when CLI-help output wraps a line).
default.extend-words = { astroid = "astroid", oject = "oject" }
# Skip content between <!-- typos:off --> and <!-- typos:on --> markers.
default.extend-ignore-re = [ "(?s)<!-- typos:off -->.*?<!-- typos:on -->" ]
default.extend-ignore-identifiers-re = [
  # error: `buildd` should be `build`, `builds`
  #     ╭▸ ./claude.md:118
  #     │
  # 118 │ (..) inside a hermetic builder (Guix, Nixpkgs, Debian buildd, RPM mock, etc.).
  #     ╰╴                                                       ━━━━━━
  #
  # `buildd` is the proper name of Debian's autobuilder daemon.
  "buildd",
  # error: `certifi` should be `certify`, `certifies`, `certified`
  #   ╭▸ ./docs/assets/dependencies.mmd:7:5
  #   │
  # 7 │     certifi["certifi\n2025.11.12"]
  #   ╰╴    ━━━━━━━
  #
  "certifi",
  # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
  #     ╭▸ ./claude.md
  #     │
  #     │ - [chalk.ist](https://chalk.ist)
  #     ╰╴         ━━━
  #
  "ist",
]

[tool.pytest]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
  "--durations=10",
  # XXX --run-non-destructiveis not required as this is the default behavior.
  # We would love to add it to the command line to make sure pytest is properly recognizing it and loads our
  # customization from ``./tests/conftest.py``. But because of issue
  # https://github.com/pytest-dev/pytest/issues/9311 (see above), it is not currently present in ``addopts``.
  # "--run-non-destructive",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.coverage]
# https://coverage.readthedocs.io/en/latest/config.html
run.branch = true
run.source = [ "meta_package_manager" ]
report.precision = 2

[tool.bumpversion]
current_version = "6.7.0.dev0"
allow_dirty = true
ignore_missing_files = true
# Parse versions with an optional .devN suffix (PEP 440).
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
  "{major}.{minor}.{patch}.dev{dev}",
  "{major}.{minor}.{patch}",
]
# When dev is "release" (its optional value), the .devN suffix is omitted.
# Bumping patch/minor/major resets dev to "0", producing X.Y.Z.dev0.
# Bumping dev goes from "0" to "release", stripping the suffix for release.
parts.dev.values = [ "0", "release" ]
parts.dev.optional_value = "release"

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in [project] section. Anchored to a line start (regex) so it
# does not also match version-suffixed keys like file-version/product-version
# under [tool.nuitka], which contain `version = "X"` as a substring (their
# values collide with the package version on release commits, where the .devN
# suffix is absent).
filename = "./pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update version in download URL.
filename = "./pyproject.toml"
search = "releases/tag/v{current_version}"
replace = "releases/tag/v{new_version}"

[[tool.bumpversion.files]]
# Keep the numeric file-version/product-version under [tool.nuitka] in sync,
# when present. Nuitka rejects PEP 440 .devN suffixes, so the file-specific
# serialize strips them; the `-version = "` prefix matches both keys at once.
# ignore_missing_version makes this a no-op in projects without [tool.nuitka].
filename = "./pyproject.toml"
ignore_missing_version = true
serialize = [ "{major}.{minor}.{patch}" ]
search = '-version = "{current_version}"'
replace = '-version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [`{current_version}` (unreleased)]("
replace = "## [`{new_version}` (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true
overrides = [ { ignore_missing_imports = true, module = [ "packageurl.*" ] } ]

[tool.lychee]
# ref: https://github.com/lycheeverse/lychee/blob/master/lychee.example.toml
exclude = [
  # GitHub renders issue comments with JavaScript, so the linkcheck builder cannot find them.
  "^https://github.com/.+#issuecomment-\\d+$",
  # GitHub renders commit-diff anchors client-side; the static HTML has no #diff-<hash> targets.
  "^https://github.com/.+/commit/[0-9a-f]+#diff-[0-9a-f]+$",
  # GitHub README tab fragments are rendered client-side.
  "^https://github\\.com/.+\\?tab=readme-ov-file#",
  # Skip suggesting redirecting generic download links to their binary artefact.
  "^https://github.com/.+/releases/.+/download/.*$",
  # Allow redirects of generic DOI URLs to their specific Zenodo release page.
  "^https://doi.org/.+/zenodo.*$",
  # Allow redirects to the official pip documentation.
  "^https://pip.pypa.io/.*$",
  # Sites that respond 403/418/timeout to lychee but are valid in a browser.
  "^https://claude\\.ai/.*$",
  "^https://devkitpro\\.org/?$",
  "^https://docs\\.chocolatey\\.org/.*$",
  "^https://en\\.opensuse\\.org/.*$",
  "^https://git\\.yoctoproject\\.org/.*$",
  "^https://gitlab\\.alpinelinux\\.org/.*$",
  "^https://gitlab\\.manjaro\\.org/.*$",
  "^https://liberapay\\.com/?$",
  "^https://medium\\.com/.*$",
  "^https://ohmybash\\.nntoan\\.com/?$",
  "^http://www\\.slackware\\.com/.*$",
  "^https://www\\.bitdefender\\.com/.*$",
  "^https://www\\.gnu\\.org/software/.*$",
  "^https://www\\.npmjs\\.com/?$",
  "^https://(www\\.)?patreon\\.com/?$",
  "^https://www\\.tug\\.org/.*$",
  # star-history.com renders chart fragments client-side; lychee can't see them.
  "^https://star-history\\.com/.*$",
  # openclipart.org intermittently returns 500 for valid asset detail pages.
  "^https://openclipart\\.org/.*$",
]

[tool.repomatic]
exclude = [ "labels", "skills" ]
# Source paths for workflow trigger filters.
workflow.source-paths = [ "meta_package_manager" ]
# Tests install system packages (apt, brew, etc.) and need a full runner image.
test-matrix.replace.os = { "ubuntu-slim" = "ubuntu-24.04" }
# lxml cannot compile on Windows ARM64.
# See: https://bugs.launchpad.net/lxml/+bug/2004481
test-matrix.remove.os = [ "windows-11-arm" ]
test-matrix.exclude = [ { python-version = "3.15t" } ]
# Test plan for binary testing.
test-plan.file = "./tests/cli-test-plan.yaml"
# Sync optional-dependencies into the build venv so the Nuitka binary ships
# every feature gated behind try/except imports in click-extra and mpm:
#   - sbom: cyclonedx-python-lib + spdx-tools, for `mpm sbom --spdx` and
#           `mpm sbom --cyclonedx`.
#   - toml/yaml/json5/jsonc/hjson/xml: click-extra config-file readers, for
#           `mpm --config <path>` and `mpm --table-format <fmt>` output.
# Paired with `include-package` in [tool.nuitka] below to defeat Nuitka's
# try/except import skip.
nuitka.extras = [ "hjson", "json5", "jsonc", "sbom", "toml", "xml", "yaml" ]
# Render the mpm Click command tree as roff `.1` files and attach them as
# `mpm-manpages.tar.gz` to every GitHub release (handled by the `manpages` job
# in repomatic's `_release-engine.yaml`). The `module:function` form bypasses
# the `mpm` console-script entry point, which dispatches through
# `__main__:main` and lazy-imports the Click command beyond click-extra's
# resolver reach.
manpages.script = "meta_package_manager.cli:mpm"
# Keep the asset short: defaults to `<package-name>-manpages.tar.gz` (i.e.
# `meta-package-manager-manpages.tar.gz`) when omitted; `mpm-manpages.tar.gz`
# matches the CLI name and shortens the asset URL on every release.
manpages.asset-name = "mpm-manpages"
# File-based PR labeller rules. See repomatic's labels.file-rules schema.

[[tool.repomatic.labels.file-rules]]
label = "🔌 bar-plugin"
any-glob-to-any-file = ["meta_package_manager/bar_plugin/*", "tests/*bar_plugin*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: apk"
any-glob-to-any-file = ["meta_package_manager/managers/apk*", "tests/*apk*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: apm"
any-glob-to-any-file = ["meta_package_manager/managers/apm*", "tests/*apm*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: asdf"
any-glob-to-any-file = ["meta_package_manager/managers/asdf*", "tests/*asdf*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: cargo"
any-glob-to-any-file = ["meta_package_manager/managers/cargo*", "tests/*cargo*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: choco"
any-glob-to-any-file = ["meta_package_manager/managers/chocolatey*", "tests/*chocolatey*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: composer"
any-glob-to-any-file = ["meta_package_manager/managers/composer*", "tests/*composer*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: dnf-based"
any-glob-to-any-file = ["meta_package_manager/managers/dnf*", "tests/*dnf*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: dpkg-based"
any-glob-to-any-file = ["meta_package_manager/managers/apt*", "meta_package_manager/managers/dpkg*", "meta_package_manager/managers/opkg*", "tests/*apt*", "tests/*dpkg*", "tests/*opkg*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: emerge"
any-glob-to-any-file = ["meta_package_manager/managers/emerge*", "tests/*emerge*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: eopkg"
any-glob-to-any-file = ["meta_package_manager/managers/eopkg*", "tests/*eopkg*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: flatpak"
any-glob-to-any-file = ["meta_package_manager/managers/flatpak*", "tests/*flatpak*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: fwupd"
any-glob-to-any-file = ["meta_package_manager/managers/fwupd*", "tests/*fwupd*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: gem"
any-glob-to-any-file = ["meta_package_manager/managers/gem*", "tests/*gem*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: guix"
any-glob-to-any-file = ["meta_package_manager/managers/guix*", "tests/*guix*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: homebrew"
any-glob-to-any-file = ["meta_package_manager/managers/homebrew*", "tests/*homebrew*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: macports"
any-glob-to-any-file = ["meta_package_manager/managers/macports*", "tests/*macports*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: mas"
any-glob-to-any-file = ["meta_package_manager/managers/mas*", "tests/*mas*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: mpm"
any-glob-to-any-file = ["meta_package_manager/*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: nix"
any-glob-to-any-file = ["meta_package_manager/managers/nix*", "tests/*nix*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: npm-based"
any-glob-to-any-file = ["meta_package_manager/managers/npm*", "meta_package_manager/managers/yarn*", "tests/*npm*", "tests/*yarn*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: pacman-based"
any-glob-to-any-file = ["meta_package_manager/managers/pacman*", "meta_package_manager/managers/pacaur*", "meta_package_manager/managers/paru*", "meta_package_manager/managers/yay*", "tests/*pacman*", "tests/*pacaur*", "tests/*paru*", "tests/*yay*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: pacstall"
any-glob-to-any-file = ["meta_package_manager/managers/pacstall*", "tests/*pacstall*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: pip-based"
any-glob-to-any-file = ["meta_package_manager/managers/pip*", "tests/*pip*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: pkg-based"
any-glob-to-any-file = ["meta_package_manager/managers/pkg*", "tests/*pkg*", "tests/*ports*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: pwsh-gallery"
any-glob-to-any-file = ["meta_package_manager/managers/pwsh_gallery*", "tests/*pwsh_gallery*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: scoop"
any-glob-to-any-file = ["meta_package_manager/managers/scoop*", "meta_package_manager/managers/sfsu*", "tests/*scoop*", "tests/*sfsu*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: sdkman"
any-glob-to-any-file = ["meta_package_manager/managers/sdkman*", "tests/*sdkman*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: snap"
any-glob-to-any-file = ["meta_package_manager/managers/snap*", "tests/*snap*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: steamcmd"
any-glob-to-any-file = ["meta_package_manager/managers/steamcmd*", "tests/*steamcmd*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: uv-based"
any-glob-to-any-file = ["meta_package_manager/managers/uv*", "tests/*uv*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: vscode-based"
any-glob-to-any-file = ["meta_package_manager/managers/vscode*", "tests/*vscode*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: winget"
any-glob-to-any-file = ["meta_package_manager/managers/winget*", "tests/*winget*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: xbps"
any-glob-to-any-file = ["meta_package_manager/managers/xbps*", "tests/*xbps*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: zerobrew"
any-glob-to-any-file = ["meta_package_manager/managers/zerobrew*", "tests/*zerobrew*"]

[[tool.repomatic.labels.file-rules]]
label = "📦 manager: zypper"
any-glob-to-any-file = ["meta_package_manager/managers/zypper*", "tests/*zypper*"]

# Content-based labeller rules. See repomatic's labels.content-rules schema.

[[tool.repomatic.labels.content-rules]]
label = "🔌 bar-plugin"
patterns = ["xbar", "swiftbar", "plugin"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: apk"
patterns = ["apk", "alpine", "alpine linux"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: apm"
patterns = ["apm", "atom"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: asdf"
patterns = ["asdf", "asdf-vm", "version manager"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: cargo"
patterns = ["cargo", "rust", "crate"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: choco"
patterns = ["choco", "chocolatey"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: composer"
patterns = ["composer", "php"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: dnf-based"
patterns = ["dnf", "yum", "rpm", "fedora", "redhat", "rhel"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: dpkg-based"
patterns = ["apt", "apt-mint", "aptitude", "dpkg", "opkg", "ubuntu", "debian", "mint"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: emerge"
patterns = ["emerge", "portage", "gentoo"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: eopkg"
patterns = ["eopkg", "solus"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: flatpak"
patterns = ["flatpak", "flat"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: fwupd"
patterns = ["fwupd", "fwupdmgr", "lvfs"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: gem"
patterns = ["gem", "ruby"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: guix"
patterns = ["guix", "gnu guix"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: homebrew"
patterns = ["brew", "cask", "homebrew", "tap", "formula"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: macports"
patterns = ["macports", "port"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: mas"
patterns = ["mas", "app store", "app-store"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: nix"
patterns = ["nix", "nixpkgs", "nixos"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: npm-based"
patterns = ["npm", "node", "yarn"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: pacman-based"
patterns = ["pacman", "arch", "pacaur", "paru", "yay"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: pacstall"
patterns = ["pacstall"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: pip-based"
patterns = ["pip", "pipx"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: pkg-based"
patterns = ["pkg", "ports", "freebsd", "freebsd ports"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: pwsh-gallery"
patterns = ["powershell", "powershell gallery", "psgallery", "psresourceget", "pwsh"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: scoop"
patterns = ["scoop", "sfsu"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: sdkman"
patterns = ["sdkman", "sdk man"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: snap"
patterns = ["snap"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: steamcmd"
patterns = ["steamcmd", "steam", "valve"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: uv-based"
patterns = ["uv", "uvx"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: vscode-based"
patterns = ["vscode", "vscodium", "visual studio code", "visual studio"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: winget"
patterns = ["winget"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: xbps"
patterns = ["xbps", "void linux", "void"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: zerobrew"
patterns = ["zerobrew", "zb"]

[[tool.repomatic.labels.content-rules]]
label = "📦 manager: zypper"
patterns = ["zypper", "opensuse", "suse"]

[[tool.repomatic.labels.content-rules]]
label = "🖥 platform: BSD"
patterns = ["bsd"]

[[tool.repomatic.labels.content-rules]]
label = "🖥 platform: Linux"
patterns = ["linux"]

[[tool.repomatic.labels.content-rules]]
label = "🖥 platform: macOS"
patterns = ["macos", "mac os", "osx", "os x", "apple"]

[[tool.repomatic.labels.content-rules]]
label = "🖥 platform: Unix"
patterns = ["unix"]

[[tool.repomatic.labels.content-rules]]
label = "🖥 platform: Windows"
patterns = ["windows", "c:", "microsoft"]

[[tool.repomatic.labels.extra]]
name = "📦 manager: apk"
color = "bfdadc"
description = "apk"

[[tool.repomatic.labels.extra]]
name = "📦 manager: apm"
color = "bfdadc"
description = "apm"

[[tool.repomatic.labels.extra]]
name = "📦 manager: asdf"
color = "bfdadc"
description = "asdf"

[[tool.repomatic.labels.extra]]
name = "📦 manager: cargo"
color = "bfdadc"
description = "cargo"

[[tool.repomatic.labels.extra]]
name = "📦 manager: choco"
color = "bfdadc"
description = "choco"

[[tool.repomatic.labels.extra]]
name = "📦 manager: composer"
color = "bfdadc"
description = "composer"

[[tool.repomatic.labels.extra]]
name = "📦 manager: cpan"
color = "bfdadc"
description = "cpan"

[[tool.repomatic.labels.extra]]
name = "📦 manager: dpkg-based"
color = "bfdadc"
description = "apt, apt-mint, deb-get, opkg, pacstall"

[[tool.repomatic.labels.extra]]
name = "📦 manager: emerge"
color = "bfdadc"
description = "emerge"

[[tool.repomatic.labels.extra]]
name = "📦 manager: eopkg"
color = "bfdadc"
description = "eopkg"

[[tool.repomatic.labels.extra]]
name = "📦 manager: flatpak"
color = "bfdadc"
description = "flatpak"

[[tool.repomatic.labels.extra]]
name = "📦 manager: fwupd"
color = "bfdadc"
description = "fwupd"

[[tool.repomatic.labels.extra]]
name = "📦 manager: gem"
color = "bfdadc"
description = "gem"

[[tool.repomatic.labels.extra]]
name = "📦 manager: guix"
color = "bfdadc"
description = "guix"

[[tool.repomatic.labels.extra]]
name = "📦 manager: homebrew"
color = "bfdadc"
description = "brew, cask, zerobrew"

[[tool.repomatic.labels.extra]]
name = "📦 manager: macports"
color = "bfdadc"
description = "macports"

[[tool.repomatic.labels.extra]]
name = "📦 manager: mas"
color = "bfdadc"
description = "mas"

[[tool.repomatic.labels.extra]]
name = "📦 manager: mise"
color = "bfdadc"
description = "mise"

[[tool.repomatic.labels.extra]]
name = "📦 manager: mpm"
color = "bfdadc"
description = "mpm"

[[tool.repomatic.labels.extra]]
name = "📦 manager: nix"
color = "bfdadc"
description = "nix"

[[tool.repomatic.labels.extra]]
name = "📦 manager: npm-based"
color = "bfdadc"
description = "npm, yarn, yarn-berry"

[[tool.repomatic.labels.extra]]
name = "📦 manager: pacman-based"
color = "bfdadc"
description = "pacaur, pacman, paru, yay"

[[tool.repomatic.labels.extra]]
name = "📦 manager: pip-based"
color = "bfdadc"
description = "pip, pipx"

[[tool.repomatic.labels.extra]]
name = "📦 manager: pkg-based"
color = "bfdadc"
description = "pkg, ports"

[[tool.repomatic.labels.extra]]
name = "📦 manager: pwsh-gallery"
color = "bfdadc"
description = "pwsh-gallery"

[[tool.repomatic.labels.extra]]
name = "📦 manager: rpm-based"
color = "bfdadc"
description = "dnf, dnf5, yum, zypper"

[[tool.repomatic.labels.extra]]
name = "📦 manager: scoop-based"
color = "bfdadc"
description = "scoop, sfsu"

[[tool.repomatic.labels.extra]]
name = "📦 manager: sdkman"
color = "bfdadc"
description = "sdkman"

[[tool.repomatic.labels.extra]]
name = "📦 manager: snap"
color = "bfdadc"
description = "snap"

[[tool.repomatic.labels.extra]]
name = "📦 manager: steamcmd"
color = "bfdadc"
description = "steamcmd"

[[tool.repomatic.labels.extra]]
name = "📦 manager: stew"
color = "bfdadc"
description = "stew"

[[tool.repomatic.labels.extra]]
name = "📦 manager: topgrade"
color = "bfdadc"
description = "topgrade"

[[tool.repomatic.labels.extra]]
name = "📦 manager: uv-based"
color = "bfdadc"
description = "uv, uvx"

[[tool.repomatic.labels.extra]]
name = "📦 manager: vscode-based"
color = "bfdadc"
description = "vscode, vscodium"

[[tool.repomatic.labels.extra]]
name = "📦 manager: winget"
color = "bfdadc"
description = "winget"

[[tool.repomatic.labels.extra]]
name = "📦 manager: xbps"
color = "bfdadc"
description = "xbps"

[[tool.repomatic.labels.extra]]
name = "🔌 bar-plugin"
color = "fef2c0"
description = "Xbar/SwiftBar plugin code, documentation and features"

[[tool.repomatic.labels.extra]]
name = "🖥 platform: BSD"
color = "bfd4f2"
description = "DragonFly BSD, FreeBSD, MidnightBSD, NetBSD, OpenBSD, SunOS"

[[tool.repomatic.labels.extra]]
name = "🖥 platform: Linux"
color = "bfd4f2"
description = "Alpine Linux, ALT Linux, Amazon Linux, Android, Arch Linux, Buildroot, CachyOS, CentOS, …"

[[tool.repomatic.labels.extra]]
name = "🖥 platform: macOS"
color = "bfd4f2"
description = "macOS"

[[tool.repomatic.labels.extra]]
name = "🖥 platform: Unix"
color = "bfd4f2"
description = "Cygwin, GNU/Hurd, Haiku, IBM AIX, IBM i, illumos, Solaris"

[[tool.repomatic.labels.extra]]
name = "🖥 platform: Windows"
color = "bfd4f2"
description = "Windows"

[tool.gitleaks]
allowlist.description = "False positives"
allowlist.commits = [
  # Old Travis CI HOMEBREW_GITHUB_API_TOKEN (revoked).
  "ee7613d49366694877177d82e207e870afb3cc1f",
  # Example brew cask output containing API_KEY="abcdef123456".
  "745247e5c74122de9ec2dd95cbd3b8510fe224d5",
  "e31111be719406940519f52c9d4406e97fb368a3",
]
